

JTAGS


Changes between versions 0.97 and 0.98.0 (TDB)
----------------------------------------------

- Added support for Java 8 constructs: default methods, method references,
  lambdas.

- Added hook to be run after updating tags table files.

- Using etags-goto-tag-location to improve precision in locating tags.

- Removed deprecated variables and methods.

- Droppped support for GNU Emacs 21.


Changes between versions 0.96 and 0.97 (2016-01-18)
---------------------------------------------------

- Added support for http URLs in jtags-browse-url. Configure a Javadoc URL to
  use for each group of packages, e.g. java or org.jdom.

- Only the Javadoc for the class found is displayed, not the entire Javadoc
  frame set with all packages and classes.

- Added support for Java enums.

- Improved Java code parsing.

- Made jtags more package-aware.

- Binding case-fold-search with let instead of setting it with setq.

- Using internal jtags-in-literal instead of c-in-literal.

- Changes to make jtags work with Emacs 24.5 and Java 8 source code.

- Changed license to GNU GPL version 3.


Changes between versions 0.95 and 0.96 (2008-10-03)
---------------------------------------------------

- Improved member completion: Members that are not visible in the current scope
  are now excluded from the list of matching members. Members in super classes
  are now included in the list, but are displayed using a different face (GNU
  Emacs). When completing a member in a class (and not an object), only static
  members are included in the list of matching members.

- Function jtags-show-declaration now stores a tag mark so it can be retrieved
  by etags function pop-tag-mark (M-*).

- Changed jtags to be an autoloadable minor mode - jtags-mode. Moved key
  bindings and menu to jtags-mode-map.

- Added support for Java 5 for loops.

- Added function jtags-buffer-tag-table-list to parse and return the tags table
  list.
